--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,6 +42,13 @@ footer {
 .MuiAppBar-root {
     border-radius: 0px 0px 10px 10px !important;
 }
+.pointer {
+    cursor: pointer;
+}
+
+.hiddenFieldset {
+    border: 0;
+}
 
 .mainPageButton {
     border-radius: 24px !important;
@@ -70,6 +77,10 @@ footer {
 .block {
     display: block;
     color: rgba(0, 0, 0, 0.38);
+}
+
+.floatRight {
+    float: right;
 }
 
 .sub {
