--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,8 @@ html {
 }
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-        "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: rgb(0, 155, 160);
@@ -46,13 +46,14 @@ footer {
     cursor: pointer;
 }
 
+.full-width {
+    width: 100%;
+}
+.margin-top-5 {
+    margin-top: 5px;
+}
 .hiddenFieldset {
     border: 0;
-}
-
-.mainPageButton {
-    border-radius: 24px !important;
-    height: 60px;
 }
 
 .container {
