complete buy again feature

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -99,3 +99,7 @@ footer {
 .margin-right-5 {
     margin-right: 5px !important;
 }
+
+.MuiListItem-divider:last-child {
+    border-bottom: none !important;
+}
