--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,8 @@ html {
 }
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-        "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: rgb(0, 155, 160);
@@ -30,7 +30,8 @@ footer {
     width: 100%;
     padding: 0;
     margin: 0;
-
+    background: rgb(0, 155, 160);
+    left: 0;
     color: #fafafa;
     position: fixed;
     text-align: center;
