--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 html {
-    height: 100%;
+    height: 100vh;
     top: 0;
     margin: 0;
     -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
@@ -10,10 +10,9 @@ body {
         "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: #009ba0;
-    height: 100%;
+    background: #fafafa;
     margin: 0;
-    overflow: hidden;
+    overflow: auto;
 }
 
 code {
@@ -22,10 +21,9 @@ code {
 #root {
     height: 100%;
     background: #fafafa;
-    overflow: auto;
 }
 
-footer {
+footer {  
     bottom: 0px;
     width: 100%;
     padding: 0;
